--- a/n1ghtshade/packages.plist
+++ b/n1ghtshade/packages.plist
@@ -12,5 +12,11 @@
 			<key>url</key>
 			<string>https://synackuk.github.io/n1ghtshade/packages/cydia.tar</string>
 		</dict>
+		<dict>
+			<key>title</key>
+			<string>uicache</string>
+			<key>description</key>
+			<string>run uicache</string>
+		</dict>
 	</array>
 </plist>
